1 Compiler/version1/Compiler/src/main/java/antl/gggggParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g 2013-06-24 01:24:52

package antl;


import org.antlr.runtime.*;
import org.antlr.stringtemplate.StringTemplate;
import org.antlr.stringtemplate.StringTemplateGroup;
import org.antlr.stringtemplate.language.AngleBracketTemplateLexer;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Stack;

public class gggggParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DEDENT", "ENDL", "CLEAR_LINE", "FUNCTION", "ID", "MAIN", "INDENT", "STRING", "IF", "ELSE", "WHILE", "FOR", "INT", "FLOAT", "TAB", "WS", "COMMENT", "'['", "']'", "','", "'return'", "'Alin'", "'Alout'", "'='", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'int'", "'float'"
    };
    public static final int EOF = -1;
    public static final int T__21 = 21;
    public static final int T__22 = 22;
    public static final int T__23 = 23;
    public static final int T__24 = 24;
    public static final int T__25 = 25;
    public static final int T__26 = 26;
    public static final int T__27 = 27;
    public static final int T__28 = 28;
    public static final int T__29 = 29;
    public static final int T__30 = 30;
    public static final int T__31 = 31;
    public static final int T__32 = 32;
    public static final int T__33 = 33;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__36 = 36;
    public static final int T__37 = 37;
    public static final int T__38 = 38;
    public static final int T__39 = 39;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int DEDENT = 4;
    public static final int ENDL = 5;
    public static final int CLEAR_LINE = 6;
    public static final int FUNCTION = 7;
    public static final int ID = 8;
    public static final int MAIN = 9;
    public static final int INDENT = 10;
    public static final int STRING = 11;
    public static final int IF = 12;
    public static final int ELSE = 13;
    public static final int WHILE = 14;
    public static final int FOR = 15;
    public static final int INT = 16;
    public static final int FLOAT = 17;
    public static final int TAB = 18;
    public static final int WS = 19;
    public static final int COMMENT = 20;

    // delegates
    // delegators


    public gggggParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public gggggParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    protected StringTemplateGroup templateLib =
            new StringTemplateGroup("gggggParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
        this.templateLib = templateLib;
    }

    public StringTemplateGroup getTemplateLib() {
        return templateLib;
    }

    /**
     * allows convenient multi-value initialization:
     * "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
        public STAttrMap put(String attrName, Object value) {
            super.put(attrName, value);
            return this;
        }

        public STAttrMap put(String attrName, int value) {
            super.put(attrName, new Integer(value));
            return this;
        }
    }

    public String[] getTokenNames() {
        return gggggParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g";
    }


    AllDescTable table = new AllDescTable();


    public static class program_return extends ParserRuleReturnScope {
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "program"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:62:1: program : ( globalsVar | function | main )+ ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        globalsVar_return globalsVar1 = null;

        function_return function2 = null;

        main_return main3 = null;


        int stageProg = 0;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:66:3: ( ( globalsVar | function | main )+ )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:67:6: ( globalsVar | function | main )+
            {
                // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:67:6: ( globalsVar | function | main )+
                int cnt1 = 0;
                loop1:
                do {
                    int alt1 = 4;
                    switch (input.LA(1)) {
                        case ID: {
                            alt1 = 1;
                        }
                        break;
                        case FUNCTION: {
                            alt1 = 2;
                        }
                        break;
                        case MAIN: {
                            alt1 = 3;
                        }
                        break;

                    }

                    switch (alt1) {
                        case 1:
                            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:67:7: globalsVar
                        {
                            pushFollow(FOLLOW_globalsVar_in_program94);
                            globalsVar1 = globalsVar();

                            state._fsp--;

                            if (stageProg <= 1) {
                                stageProg = 1;
                            } else {
                                Errors.WrongStageVar((globalsVar1 != null ? globalsVar1.varline : 0));
                            }

                        }
                        break;
                        case 2:
                            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:68:8: function
                        {
                            pushFollow(FOLLOW_function_in_program106);
                            function2 = function();

                            state._fsp--;

                            if (stageProg <= 2) {
                                stageProg = 2;
                            } else {
                                Errors.WrongStageFun((function2 != null ? function2.funline : 0));
                            }

                        }
                        break;
                        case 3:
                            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:69:8: main
                        {
                            pushFollow(FOLLOW_main_in_program117);
                            main3 = main();

                            state._fsp--;

                            if (stageProg <= 3) {
                                stageProg = 3;
                            } else {
                                Errors.WrongStageMain((main3 != null ? main3.mainline : 0));
                            }

                        }
                        break;

                        default:
                            if (cnt1 >= 1) break loop1;
                            EarlyExitException eee =
                                    new EarlyExitException(1, input);
                            throw eee;
                    }
                    cnt1++;
                } while (true);


            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class globalsVar_return extends ParserRuleReturnScope {
        public int varline;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "globalsVar"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:73:1: globalsVar returns [int varline] : assignOp l= ';' ENDL ;
    public final globalsVar_return globalsVar() throws RecognitionException {
        globalsVar_return retval = new globalsVar_return();
        retval.start = input.LT(1);

        Token l = null;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:75:3: ( assignOp l= ';' ENDL )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:75:5: assignOp l= ';' ENDL
            {
                pushFollow(FOLLOW_assignOp_in_globalsVar143);
                assignOp();

                state._fsp--;

                l = (Token) match(input, DEDENT, FOLLOW_DEDENT_in_globalsVar147);
                retval.varline = (l != null ? l.getLine() : 0);
                match(input, ENDL, FOLLOW_ENDL_in_globalsVar151);

            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "globalsVar"

    public static class function_return extends ParserRuleReturnScope {
        public int funline;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "function"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:78:1: function returns [int funline] : functionHeader block CLEAR_LINE ;
    public final function_return function() throws RecognitionException {
        function_return retval = new function_return();
        retval.start = input.LT(1);

        functionHeader_return functionHeader4 = null;

        block_return block5 = null;


        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:83:2: ( functionHeader block CLEAR_LINE )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:83:4: functionHeader block CLEAR_LINE
            {
                pushFollow(FOLLOW_functionHeader_in_function171);
                functionHeader4 = functionHeader();

                state._fsp--;

                retval.funline = (functionHeader4 != null ? functionHeader4.funline : 0);
                pushFollow(FOLLOW_block_in_function178);
                block5 = block();

                state._fsp--;

                table.checkReturnable((block5 != null ? block5.hasLastRet : false), (functionHeader4 != null ? functionHeader4.funline : 0));
                match(input, CLEAR_LINE, FOLLOW_CLEAR_LINE_in_function182);

            }

            retval.stop = input.LT(-1);


            table.clearCurFun();

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class functionHeader_return extends ParserRuleReturnScope {
        public int funline;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "functionHeader"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:87:1: functionHeader returns [int funline] : FUNCTION id= ID '[' formalArgsList ']' ;
    public final functionHeader_return functionHeader() throws RecognitionException {
        functionHeader_return retval = new functionHeader_return();
        retval.start = input.LT(1);

        Token id = null;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:89:3: ( FUNCTION id= ID '[' formalArgsList ']' )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:89:5: FUNCTION id= ID '[' formalArgsList ']'
            {
                match(input, FUNCTION, FOLLOW_FUNCTION_in_functionHeader198);
                id = (Token) match(input, ID, FOLLOW_ID_in_functionHeader202);
                table.defineFun((id != null ? id.getText() : null), (id != null ? id.getLine() : 0));
                retval.funline = (id != null ? id.getLine() : 0);
                match(input, 21, FOLLOW_21_in_functionHeader206);
                pushFollow(FOLLOW_formalArgsList_in_functionHeader208);
                formalArgsList();

                state._fsp--;

                match(input, 22, FOLLOW_22_in_functionHeader210);

            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "functionHeader"

    public static class formalArgsList_return extends ParserRuleReturnScope {
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "formalArgsList"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:92:1: formalArgsList : (id= ID ( ',' idi= ID )* )? ;
    public final formalArgsList_return formalArgsList() throws RecognitionException {
        formalArgsList_return retval = new formalArgsList_return();
        retval.start = input.LT(1);

        Token id = null;
        Token idi = null;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:3: ( (id= ID ( ',' idi= ID )* )? )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:5: (id= ID ( ',' idi= ID )* )?
            {
                // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:5: (id= ID ( ',' idi= ID )* )?
                int alt3 = 2;
                int LA3_0 = input.LA(1);

                if ((LA3_0 == ID)) {
                    alt3 = 1;
                }
                switch (alt3) {
                    case 1:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:6: id= ID ( ',' idi= ID )*
                    {
                        id = (Token) match(input, ID, FOLLOW_ID_in_formalArgsList232);
                        table.addParametr((id != null ? id.getText() : null), (id != null ? id.getLine() : 0));
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:51: ( ',' idi= ID )*
                        loop2:
                        do {
                            int alt2 = 2;
                            int LA2_0 = input.LA(1);

                            if ((LA2_0 == 23)) {
                                alt2 = 1;
                            }


                            switch (alt2) {
                                case 1:
                                    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:93:52: ',' idi= ID
                                {
                                    match(input, 23, FOLLOW_23_in_formalArgsList236);
                                    idi = (Token) match(input, ID, FOLLOW_ID_in_formalArgsList240);
                                    table.addParametr((idi != null ? idi.getText() : null), (idi != null ? idi.getLine() : 0));

                                }
                                break;

                                default:
                                    break loop2;
                            }
                        } while (true);


                    }
                    break;

                }


            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "formalArgsList"

    public static class main_return extends ParserRuleReturnScope {
        public int mainline;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "main"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:96:1: main returns [int mainline] : MAIN block CLEAR_LINE ;
    public final main_return main() throws RecognitionException {
        main_return retval = new main_return();
        retval.start = input.LT(1);

        Token MAIN6 = null;


        table.defineCurFun(table.MAIN_NAME);

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:104:2: ( MAIN block CLEAR_LINE )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:104:4: MAIN block CLEAR_LINE
            {
                MAIN6 = (Token) match(input, MAIN, FOLLOW_MAIN_in_main277);
                retval.mainline = (MAIN6 != null ? MAIN6.getLine() : 0);
                pushFollow(FOLLOW_block_in_main281);
                block();

                state._fsp--;

                match(input, CLEAR_LINE, FOLLOW_CLEAR_LINE_in_main283);

            }

            retval.stop = input.LT(-1);


            table.clearCurFun();

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
        }
        return retval;
    }
    // $ANTLR end "main"

    protected static class block_scope {
        List stmts;
    }

    protected Stack block_stack = new Stack();

    public static class block_return extends ParserRuleReturnScope {
        public List blocks;
        public boolean hasLastRet;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "block"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:107:10: fragment block returns [List blocks, boolean hasLastRet] : ENDL INDENT ( codeBlock )+ DEDENT ;
    public final block_return block() throws RecognitionException {
        block_stack.push(new block_scope());
        block_return retval = new block_return();
        retval.start = input.LT(1);

        codeBlock_return codeBlock7 = null;


        ((block_scope) block_stack.peek()).stmts = new ArrayList();
        retval.blocks = new ArrayList();
        boolean isRet = false;
        boolean isPrevIf = false;
        boolean isIfRet = false;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:118:3: ( ENDL INDENT ( codeBlock )+ DEDENT )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:118:7: ENDL INDENT ( codeBlock )+ DEDENT
            {
                match(input, ENDL, FOLLOW_ENDL_in_block322);
                match(input, INDENT, FOLLOW_INDENT_in_block324);
                // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:119:7: ( codeBlock )+
                int cnt4 = 0;
                loop4:
                do {
                    int alt4 = 2;
                    int LA4_0 = input.LA(1);

                    if ((LA4_0 == ID || (LA4_0 >= IF && LA4_0 <= FOR) || (LA4_0 >= 24 && LA4_0 <= 26))) {
                        alt4 = 1;
                    }


                    switch (alt4) {
                        case 1:
                            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:119:8: codeBlock
                        {
                            pushFollow(FOLLOW_codeBlock_in_block334);
                            codeBlock7 = codeBlock();

                            state._fsp--;


                            if (!isPrevIf && (codeBlock7 != null ? codeBlock7.isElse : false))
                                Errors.WrongIfElse((codeBlock7 != null ? codeBlock7.line : 0));
                            if (isRet && !isPrevIf) Errors.BadAfterRet((codeBlock7 != null ? codeBlock7.line : 0));
                            if ((codeBlock7 != null ? codeBlock7.isRet : false) && ((!(codeBlock7 != null ? codeBlock7.isIf : false) && !(codeBlock7 != null ? codeBlock7.isElse : false)) || ((codeBlock7 != null ? codeBlock7.isElse : false) && isIfRet))) {
                                isRet = true;
                                table.setFunReturnable();
                            }
                            isPrevIf = (codeBlock7 != null ? codeBlock7.isIf : false);
                            if ((codeBlock7 != null ? codeBlock7.isIf : false))
                                isIfRet = (codeBlock7 != null ? codeBlock7.isRet : false);


                        }
                        break;

                        default:
                            if (cnt4 >= 1) break loop4;
                            EarlyExitException eee =
                                    new EarlyExitException(4, input);
                            throw eee;
                    }
                    cnt4++;
                } while (true);

                retval.hasLastRet = (codeBlock7 != null ? codeBlock7.isRet : false);
                match(input, DEDENT, FOLLOW_DEDENT_in_block370);

            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            block_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class codeBlock_return extends ParserRuleReturnScope {
        public boolean isRet;
        public int line;
        public boolean isIf;
        public boolean isElse;
        public StringTemplate st;

        public Object getTemplate() {
            return st;
        }

        public String toString() {
            return st == null ? null : st.toString();
        }
    }

    ;

    // $ANTLR start "codeBlock"
    // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:132:1: codeBlock returns [boolean isRet, int line, boolean isIf, boolean isElse] : ( assignOp l= ';' | functionCall l= ';' | ifOp | whileOp | forOp | elseOp | returnOp l= ';' | inOp l= ';' | outOp l= ';' ) ( ENDL | ) ;
    public final codeBlock_return codeBlock() throws RecognitionException {
        codeBlock_return retval = new codeBlock_return();
        retval.start = input.LT(1);

        Token l = null;
        ifOp_return ifOp8 = null;

        whileOp_return whileOp9 = null;

        forOp_return forOp10 = null;

        elseOp_return elseOp11 = null;


        retval.isRet = false;
        retval.isIf = false;
        retval.isElse = false;

        try {
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:139:2: ( ( assignOp l= ';' | functionCall l= ';' | ifOp | whileOp | forOp | elseOp | returnOp l= ';' | inOp l= ';' | outOp l= ';' ) ( ENDL | ) )
            // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:139:4: ( assignOp l= ';' | functionCall l= ';' | ifOp | whileOp | forOp | elseOp | returnOp l= ';' | inOp l= ';' | outOp l= ';' ) ( ENDL | )
            {
                // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:139:4: ( assignOp l= ';' | functionCall l= ';' | ifOp | whileOp | forOp | elseOp | returnOp l= ';' | inOp l= ';' | outOp l= ';' )
                int alt5 = 9;
                alt5 = dfa5.predict(input);
                switch (alt5) {
                    case 1:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:139:6: assignOp l= ';'
                    {
                        pushFollow(FOLLOW_assignOp_in_codeBlock395);
                        assignOp();

                        state._fsp--;

                        l = (Token) match(input, DEDENT, FOLLOW_DEDENT_in_codeBlock399);
                        retval.line = (l != null ? l.getLine() : 0);

                    }
                    break;
                    case 2:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:140:4: functionCall l= ';'
                    {
                        pushFollow(FOLLOW_functionCall_in_codeBlock415);
                        functionCall();

                        state._fsp--;

                        l = (Token) match(input, DEDENT, FOLLOW_DEDENT_in_codeBlock419);
                        retval.line = (l != null ? l.getLine() : 0);

                    }
                    break;
                    case 3:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:141:4: ifOp
                    {
                        pushFollow(FOLLOW_ifOp_in_codeBlock429);
                        ifOp8 = ifOp();

                        state._fsp--;

                        retval.isIf = true;
                        retval.isRet = (ifOp8 != null ? ifOp8.hasLastRet : false);
                        retval.line = (ifOp8 != null ? ifOp8.line : 0);

                    }
                    break;
                    case 4:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:142:4: whileOp
                    {
                        pushFollow(FOLLOW_whileOp_in_codeBlock450);
                        whileOp9 = whileOp();

                        state._fsp--;

                        retval.isRet = (whileOp9 != null ? whileOp9.hasLastRet : false);
                        retval.line = (whileOp9 != null ? whileOp9.line : 0);

                    }
                    break;
                    case 5:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:143:4: forOp
                    {
                        pushFollow(FOLLOW_forOp_in_codeBlock469);
                        forOp10 = forOp();

                        state._fsp--;

                        retval.isRet = (forOp10 != null ? forOp10.hasLastRet : false);
                        retval.line = (forOp10 != null ? forOp10.line : 0);

                    }
                    break;
                    case 6:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:144:4: elseOp
                    {
                        pushFollow(FOLLOW_elseOp_in_codeBlock490);
                        elseOp11 = elseOp();

                        state._fsp--;

                        retval.isElse = true;
                        retval.isRet = (elseOp11 != null ? elseOp11.hasLastRet : false);
                        retval.line = (elseOp11 != null ? elseOp11.line : 0);

                    }
                    break;
                    case 7:
                        // C:\\Users\\Fox\\workspace1\\ggg\\src\\antl\\ggggg.g:145:4: returnOp l= ';'
                    {
                        pushFollow(FOLLOW_returnOp_in_codeBlock510);
                        returnOp();

                        state._fsp--;

                        l = (Token) match(input, DEDENT, FOLLOW_DEDENT_in_codeBlock514);
                        retval.isRet = true;
                        retval.line = (l != null ? l.getLine() : 0);
